--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "aicourse",
-  "private": true,
+  "name": "StarlearnAI",
+  "private": false,
   "version": "1.0.0",
   "type": "module",
   "scripts": {
@@ -13,7 +13,6 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.1.1",
-    "@react-email/render": "^0.0.10",
     "@greatsumini/react-facebook-login": "^3.4.0",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.0",
@@ -44,8 +43,13 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@react-email/render": "^0.0.10",
+    "@react-icons/all-files": "^4.1.0",
     "@react-oauth/google": "^0.12.1",
     "@tanstack/react-query": "^5.56.2",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
     "@tiptap/extension-code-block-lowlight": "^2.11.5",
     "@tiptap/extension-color": "^2.11.5",
     "@tiptap/extension-heading": "^2.11.5",
@@ -59,67 +63,70 @@
     "@tiptap/pm": "^2.11.5",
     "@tiptap/react": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
+    "aicourse": "file:",
     "axios": "^1.8.3",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
+    "body-parser": "^1.20.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
-    "date-fns": "^3.6.0",
-    "embla-carousel-react": "^8.3.0",
-    "flutterwave-react-v3": "^1.3.2",
-    "html-to-image": "^1.11.13",
-    "html2pdf.js": "^0.10.3",
-    "input-otp": "^1.2.4",
-    "jwt-decode": "^4.0.0",
-    "lowlight": "^3.3.0",
-    "lucide-react": "^0.462.0",
-    "next-themes": "^0.3.0",
-    "react": "^18.3.1",
-    "react-day-picker": "^8.10.1",
-    "react-dom": "^18.3.1",
-    "react-helmet-async": "^2.0.5",
-    "react-hook-form": "^7.53.0",
-    "react-medium-image-zoom": "^5.2.14",
-    "react-resizable-panels": "^2.1.3",
-    "react-router-dom": "^6.26.2",
-    "react-share-on-social": "^1.0.12",
-    "react-to-pdf": "^2.0.0",
-    "react-youtube": "^10.1.0",
-    "recharts": "^2.12.7",
-    "sonner": "^1.5.0",
-    "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.3",
-    "zod": "^3.23.8",
-    "@react-icons/all-files": "^4.1.0",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "aicourse": "file:",
-    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "date-fns": "^3.6.0",
+    "dotenv": "^16.6.1",
+    "embla-carousel-react": "^8.3.0",
     "express": "^4.18.2",
     "file-saver": "^2.0.5",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.9.0",
     "flutterwave-node-v3": "^1.1.10",
+    "flutterwave-react-v3": "^1.3.2",
+    "framer-motion": "^12.23.1",
     "g-i-s": "^2.1.7",
+    "html-to-image": "^1.11.13",
+    "html2pdf.js": "^0.10.3",
+    "input-otp": "^1.2.4",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
+    "lowlight": "^3.3.0",
+    "lucide-react": "^0.462.0",
+    "mongodb": "^6.17.0",
     "mongoose": "^8.0.2",
+    "next-themes": "^0.3.0",
     "nodemailer": "^6.9.7",
     "nth-check": "^2.1.1",
+    "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
+    "react-day-picker": "^8.10.1",
+    "react-dom": "^18.3.1",
     "react-donut-chart": "^1.3.3",
+    "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.53.0",
+    "react-medium-image-zoom": "^5.2.14",
+    "react-resizable-panels": "^2.1.3",
+    "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-select-country-list": "^2.2.3",
+    "react-share-on-social": "^1.0.12",
+    "react-to-pdf": "^2.0.0",
     "react-toastify": "^9.1.3",
+    "react-youtube": "^10.1.0",
+    "recharts": "^2.12.7",
     "resolve-url-loader": "^5.0.0",
     "showdown": "^2.1.0",
+    "simple-youtube-api": "^5.2.1",
+    "sonner": "^1.5.0",
     "stripe": "^15.7.0",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
     "tough-cookie": "^4.1.3",
     "unsplash-js": "^7.0.19",
+    "vaul": "^0.9.3",
     "web-vitals": "^2.1.4",
-    "youtube-search-api": "^1.2.1",
-    "youtube-transcript": "^1.0.6"
+    "youtube-api": "^3.0.2",
+    "Youtube-api": "^1.2.1",
+    "youtube-transcript": "^1.0.6",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -127,6 +134,9 @@
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/estree": "^1.0.5",
+    "@types/testing-library__jest-dom": "^6.0.0",
+    "@vitejs/plugin-basic-ssl": "^2.1.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.9.0",
@@ -138,7 +148,7 @@
     "tailwindcss": "^3.4.11",
     "typescript": "^4.9.5",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1",
+    "vite": "^7.0.4",
     "vite-plugin-pwa": "^1.0.0"
   }
 }
