--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,22 +1,13 @@
+// tsconfig.node.json
 {
   "compilerOptions": {
-    "target": "ES2022",
-    "lib": ["ES2023"],
-    "module": "ESNext",
+    "composite": true,
     "skipLibCheck": true,
-
-    /* Bundler mode */
+    "module": "ESNext",
     "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
-    "isolatedModules": true,
-    "moduleDetection": "force",
-    "noEmit": true,
-
-    /* Linting */
+    "allowSyntheticDefaultImports": true,
     "strict": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noFallthroughCasesInSwitch": true
+    "types": ["node"] // NEW/UPDATED: Explicitly include node types
   },
-  "include": ["vite.config.ts"]
+  "include": ["vite.config.ts", "src/sw.js", "server/**/*.js"] // Ensure this covers all Node.js related files
 }
