Committing latest  update

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,27 +1,30 @@
-// tsconfig.app.json
 {
-  "extends": "./tsconfig.json",
   "compilerOptions": {
-    "composite": true,
-    "baseUrl": ".", // Add baseUrl if not already present, necessary for path aliases
-    "jsx": "react-jsx",
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "allowJs": false,
-    "esModuleInterop": false,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "Node",
-    "resolveJsonModule": true,
+    "target": "ES2020",
+    "useDefineForClassFields": true,
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "module": "ESNext",
+    "skipLibCheck": true,
+
+    /* Bundler mode */
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
     "isolatedModules": true,
+    "moduleDetection": "force",
     "noEmit": true,
-    "jsxImportSource": "react",
-    "paths": { // Ensure paths for aliases are defined if needed
+    "jsx": "react-jsx",
+
+    /* Linting */
+    "strict": false,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "noImplicitAny": false,
+    "noFallthroughCasesInSwitch": false,
+
+    "baseUrl": ".",
+    "paths": {
       "@/*": ["./src/*"]
-    },
-    // NEW/UPDATED: Explicitly include common frontend types
-    "types": ["react", "react-dom", "estree", "testing-library__jest-dom"]
+    }
   },
-  "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["src"]
 }
